Changes:
v20070304:  - org.softsmithy.lib.io.Files: delete recursivly added
(Rev.: 307) - org.softsmithy.lib.io.Streams: copy streams added
            - org.softsmithy.lib.util.zip.ZipFiles class added 
              (extract zip files)
            - Javadoc updates
            - Sample and tutorial trail about the number fields added
            - Syntax highlighting in the tutorial added
              (syntax Highlighter shipped with the tutorial is covered 
               by the LGPL)
            - small tutorial updates

v20061029:  - ShapeIcon respects aspect ratio
            - org.softsmithy.lib.swing.JListBox added
            - org.softsmithy.lib.swing.icon.XIcons added
            - StandardActions.properties some media information added
            - All jlfgr icons referenced in StandardActions.properties
            - org.softsmithy.lib.math.Doubles added
            - org.softsmithy.lib.math.Floats added
            - Bug 1581780 fixed
            - commented out system outputs
            - Javadocs added
            - First trails of a tutorial & samples added
            - a copy of the Sun Public License added (SPL.txt)
            - README.txt changed
            - New Ant targets added to the build.xml (e.g. "dist")
            - NetBeans Ant Projectfiles v5.0
            - Dist structure changed a bit
            - properties-files moved: i18n -> src (only one jar)
            - src.zip added
            - some minor changes

v20040727:  -Extended Icon Framework added which supports zooming strategies
             for icons. Image and shape icons supported.
             org.softsmithy.lib.swing.JXIconLabel and the 
             org.softsmithy.lib.swing.icon package
             ShapeIcon, XIcon and XImageIcon moved from org.softsmithy.lib.swing 
             to org.softsmithy.lib.swing.icon
            -org.softsmithy.lib.swing.JIconCustomizer, 
             org.softsmithy.lib.swing.JImageCustomizer and